# hass-orei-hdmi-matrix

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  recorder_exclude_example.yaml  requirements_dev.txt
.github/workflows/: validate.yml
custom_components/orei_hdmi_matrix/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  dashboard_card.yaml  frontend.py  lovelace_card.yaml  manifest.json  more_info.py  select.py  services.yaml  strings.json
custom_components/orei_hdmi_matrix/www/: more-info-orei_hdmi_matrix.js  orei-hdmi-matrix-card.js
tests/: __init__.py  test_api.py  test_config_flow.py
